--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.jpa.show-sql=true
 
 spring.h2.console.enable=true
 spring.datasource.url=jdbc:h2:mem:database
+
+# spring.datasource.url=jdbc:mysql://localhost:3306/adoteumpet
+# spring.datasource.username=root
+# spring.datasource.password=2009@Tamoai
+
+# spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# spring.jpa.hibernate.ddl-auto=none
